Consertando bug de z-index do menu de navegação

--- a/src/app/core/components/header/nav-bar/nav-bar.component.scss
+++ b/src/app/core/components/header/nav-bar/nav-bar.component.scss
@@ -4,6 +4,7 @@ nav {
     background-color: $cor-branco;
     left: 30%;
     position: absolute;
+    z-index: 999;
     ul {
         align-items: center;
         column-gap: 2rem;
